integrated stripe for payment, updating seats once they are bought, sending receipt to user

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,3 +27,6 @@ email:
     from-email: ${MG_FROM_EMAIL}
     username: api
     password: ${MG_PASSWORD}
+stripe:
+  api:
+    key: ${STRIPE_API_KEY}
